error.txt
  File "prevTraversal.py", line 495
    while (option is not in prevPath): 
                          ^
SyntaxError: invalid syntax
